# Platforrmer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  level.json  main.cpp
levels/: devland.json
materials/: ball.json  face.json  floor.json  missing.json
shaders/: shaders.json  sky.fs  world.fs
src/: b2debugdraw.cpp  b2debugdraw.h  config.h  entities.cpp  entities.h  glad.c  include.h  levelload.cpp  levelload.h  main.cpp  material.cpp  material.h
src/headers/: entities.h
src/include/: config.h
src/include/glad/: glad.h
src/render/: platform.h  render.cpp  render.h
src/render/opengl/: opengl_render.cpp  opengl_render.h
src/render/platform/: platform_glfw.cpp
